--- a/css/style.css
+++ b/css/style.css
@@ -230,23 +230,30 @@ header {
   width:100% ;
   height: 100vh;
 }
-header .intro-text-wrapper {
+.intro-text-wrapper {
   position: absolute;
   display: table;
   min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
-  vertical-align: middle;
-  background: rgba(0, 0, 0, 0.6);
-  text-align: center;
-  color:blue;
+  background: rgba(0, 0, 0, 0.7);
   z-index: 1;
 }
-header .intro-text-wrapper h1{
+.intro-text-wrapper h1{
   display: table-cell;
   vertical-align: middle;
 }
+.intro-text{
+  color:yellow;
+  vertical-align: 28px;
+  font-size: 45px;
+}
+.intro-text-first-character{
+  color: white;
+  font-size: 130px;
+}
+
 header .video-wrapper video{
   -webkit-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
