--- a/css/style.css
+++ b/css/style.css
@@ -225,33 +225,50 @@ fieldset[disabled] .btn-xl.active {
     font-size: 1.5em;
   }
 }
+
 header {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
   width:100% ;
   height: 100vh;
+  position: relative;
 }
-.intro-text-wrapper {
+header .video-wrapper{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: block;
+  overflow: hidden;
+}
+header .intro-text-wrapper {
   position: absolute;
-  display: table;
+  /*display: table;*/
   min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
   background: rgba(0, 0, 0, 0.7);
+  color:yellow;
   z-index: 1;
 }
-.intro-text-wrapper h1{
-  display: table-cell;
-  vertical-align: middle;
+header .intro-text-wrapper h1{
+  padding-top: 35vh;
 }
-.intro-text{
-  color:yellow;
-  vertical-align: 28px;
+header .intro-text-logo{
+  vertical-align: 34px;
   font-size: 45px;
 }
-.intro-text-first-character{
+header .intro-text-logo-first-character{
+  font-size: 150px;
   color: white;
-  font-size: 130px;
+}
+header .intro-text{
+  font-size: 24px;
+  color:white;
+}
+header .intro-text span{
+  font-weight: bold;
+  font-size: 32px;
 }
 
 header .video-wrapper video{
@@ -269,42 +286,38 @@ header .video-wrapper video{
   height: auto;
   z-index: -1;
 }
-header .intro-text .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
-}
-header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
-  margin-bottom: 25px;
-}
-@media (min-width: 768px) {
-  header .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
+@media (max-width: 678px) {
+  header .intro-text-logo{
+    font-size: 35px;
   }
-  header .intro-text .intro-lead-in {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px;
+  header .intro-text-logo-first-character{
+    font-size: 130px;
   }
-  header .intro-text .intro-heading {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
-    margin-bottom: 50px;
+  header .intro-text{
+    font-size: 20px;
+  }
+  header .intro-text span{
+    font-size: 26px;
   }
 }
+
+@media (max-width: 570px) {
+  header .intro-text-logo{
+    vertical-align: 28px;
+    font-size: 25px;
+  }
+  header .intro-text-logo-first-character{
+    font-size: 110px;
+  }
+  header .intro-text{
+    font-size: 16px;
+  }
+  header .intro-text span{
+    font-size: 20px;
+  }
+}
+
+
 section {
   padding: 100px 0;
 }
