--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,6 @@ fieldset[disabled] .btn-xl.active {
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
     transition: padding 0.3s;
-    border: none;
   }
   .navbar-custom .navbar-brand {
     font-size: 2em;
@@ -228,6 +227,7 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom .navbar-nav > .active > a {
     border-radius: 3px;
   }
+
 }
 @media (min-width: 768px) {
   .navbar-custom.affix {
@@ -324,7 +324,7 @@ header .video-wrapper video{
   height: auto;
   z-index: -1;
 }
-@media (max-width: 678px) {
+@media (max-width: 767px) {
   header .intro-text-wrapper img{
     width: 300px;
   }
@@ -333,6 +333,11 @@ header .video-wrapper video{
   }
   header .intro-text span{
     font-size: 26px;
+  }
+
+  .navbar-brand {
+    padding-top: 8px;
+    padding-left: 10px;
   }
 }
 
